2005-08-23  Benoît Dejean  <benoit@placenet.org>

	* transforms.cc (check_idna_encoding): No i18n for unittests.

2005-08-23  Benoît Dejean  <benoit@placenet.org>

	* change_set.cc (dump_change_set): boost::format instead of F.
	* commands.cc (get_log_message, notify_if_multiple_heads,
	complete, CMD(attr)): Marked some strings for i18n. Replaced a
	multiline string by prefix_lines_with(). Merged strings.
	* diff_patch.cc (merge_provider::try_to_merge_files): Merged
	strings.
	* i18n.h: N_() stands for gettext_noop(), not plural.
	* keys.cc (get_passphrase): Fixed string surgery.
	* netsync.cc: i18nized tickers' labels. Added xgettext comment
	as tickers do not play well with multibytes characters (like é).
	(session::analyze_attachment): Fixed string surgery.
	(session::process_hello_cmd): Merged many strings.
	(session::process_data_cmd): Removed some leading/trailing
	whitespaces.
	* sanity.cc: Marked error prefixes for i18n.
	* ui.cc (tick_write_count::write_ticks): Reworked and fixed
	surgery. Merged some strings.

2005-08-23  Benoît Dejean  <benoit@placenet.org>

	* netcmd.cc (test_netcmd_functions): Don't translate unittest
	strings.
	* rcs_import.cc (cvs_commit::cvs_commit):
	* database.cc (version_cache::put):
	* lua.cc (dump_stack): boost::format vs. F for strings that are
	not messages.

2005-08-23  Benoît Dejean  <benoit@placenet.org>

	* xdelta.cc: Don't translate unittest strings.

2005-08-22  Nathaniel Smith  <njs@pobox.com>

	* contrib/ciabot_monotone.py (send_change_for): Handle author
	names with spaces in.

2005-08-22  Matt Johnston  <matt@ucc.asn.au>

	* HACKING: change the vim modeline to something that seems to work
	better.

2005-08-23  Olivier Andrieu  <oliv__a@users.sourceforge.net>

	* contrib/monotone.el: When running monotone commands, re-use
	*monotone* buffers. Make the "status" command use the prefix
	argument. Make the "tree"-restricted commands work in dired
	buffers. Add the "--no-merges" option in the log command. Various